2003-07-11  Federico Mena Quintero  <federico@ximian.com>

	* gui/dialogs/task-details-page.glade: Changed the "URL:" label to
	"_Web Page:".  Added a widget name to the URL label so that we can
	hook up its mnemonic by hand.  Added underlines to the "%
	Complete:" and "Date Completed:" labels.  Added a widget name to
	the date completed label, also so that we can hook up its mnemonic.

	* gui/dialogs/task-details-page.c (get_widgets): Get the url_label
	and date_completed_label as well.
	(init_widgets): Set the mnemonic widgets of the url_label and the
	date_completed_label by hand, as their respective widgets are
	not created by libglade.

	* gui/e-calendar-table.c (tasks_popup_menu): Added an item for
	"Open Web Page".
	(e_calendar_table_show_popup_menu): Disable the aforementioned
	menu item if the selected task doesn't have the URL property set.
	(open_url_cb): New callback.

	* gui/e-tasks.c (write_html): Make the HTML say "Web Page:"
	instead of "URL:".

2003-07-10  Harry Lu <harry.lu@sun.com>

	Fixes #46075.

	* gui/e-date-time-list.c (compare_datetime): new function to compare
	two CalComponentDateTime instances.
	(e_date_time_list_append): check whether the date already exists
	before adding it to the list.

2003-07-07  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #45910

	* gui/dialogs/task-editor.c (task_editor_class_init): set up the
	handler for the set_cal_client virtual method.
	(task_editor_set_cal_client): added missing virtual method.

2003-07-07  Jack Jia <jack.jia@sun.com>

	* cal-client/cal-client.c (cal_client_get_static_capability): add
	g_return_val_if_fail to check the input param.

2003-07-03  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-tasks.c (setup_widgets): added a paned widget to contain
	the task list and a HTML widget for displaying the task's details.
	Connect to "cursor_change" signal on the ETable.
	(table_cursor_change_cb): update the HTML view every time the selected
	task changes.